larger font, fixed broken insta link

--- a/views/CSS/style.css
+++ b/views/CSS/style.css
@@ -61,6 +61,7 @@ nav{
     font-weight: 800;
     color: #5B9240;
     position: relative;
+    font-size: 1.2em;
 
 }
 
@@ -208,9 +209,9 @@ main{
     color: #5B9240;
     font-weight: 800;
     padding: 3% 3% 3% 0%;
-    
+    font-size: 1.2em;
     background-color: #ffffff;
-    line-height: 1.2;
+    line-height: 1.3;
     
 }
 
@@ -649,6 +650,8 @@ main{
     font-family: 'Figtree', sans-serif;
     color: #5B9240;
     font-weight: 800;
+    font-size: 1.2em;
+    line-height: 1.1em;
     margin-right: 7%;
     border-radius: 8px;
 }
